--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-audio-recorder-player": "^3.6.1",
     "react-native-fs": "^2.20.0"
   },
   "devDependencies": {
