--- a/example/package.json
+++ b/example/package.json
@@ -6,13 +6,11 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd ios && xcodebuild -workspace BackgroundAudioRecordExample.xcworkspace -scheme BackgroundAudioRecordExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
+    "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-audio-recorder-player": "^3.6.1",
     "react-native-fs": "^2.20.0"
   },
   "devDependencies": {
